--- a/style.css
+++ b/style.css
@@ -22,7 +22,18 @@ main {
 h1 {
   color: black;
   letter-spacing: 1px;
-  margin: 30px;
+  margin: 2px;
+}
+
+.title-container {
+  width: 55%;
+  padding: 5px;
+}
+
+.instructions {
+  font-size: 14px;
+  color: #686868;
+  margin: 2px;
 }
 
 form {
@@ -50,7 +61,6 @@ p {
   flex-direction: row;
   align-items: center;
   gap: 1.5rem;
-  /* padding: 0px 20px; */
   text-align: center;
 }
 
@@ -72,7 +82,7 @@ p {
 
 .calculate-btn:hover,
 .calculate-btn:focus {
-  background-color: #22223bb7;
+  background-color: #5d5da0;
   font-weight: bold;
 }
 
@@ -87,6 +97,10 @@ input {
   border: 1.5px solid #c9c9c9;
   border-radius: 4px;
   text-align: center;
+}
+
+input::placeholder {
+  font-size: 15px;
 }
 
 input:focus {
@@ -172,9 +186,13 @@ span {
     font-size: 13px;
   }
 
+  .result-container {
+    gap: .5rem;
+  }
+
   .calculate-btn {
-    width: 5rem;
-    height: 2rem;
+    width: 4.5rem;
+    height: 1.8rem;
     font-size: 10px;
   }
 
@@ -194,7 +212,7 @@ span {
   }
 
   .result-container {
-    gap: .5rem;
+    gap: .4rem;
   }
 }
 
