--- a/definitions.css
+++ b/definitions.css
@@ -1,16 +1,79 @@
+html {
+  padding: 0px;
+  margin: 0px;
+  overflow-x: hidden;
+}
+
 body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   color: black;
   font-family: "Montserrat", sans-serif;
+  padding: 0px;
+  margin: 0px;
+}
+
+nav {
+  border-bottom: 5px solid #5d5da0;
+  width: 100%;
+  padding: 1.5rem;
+  box-shadow: 0px 1px 10px #999;
+}
+
+.nav-contents {
+  display: flex;
+  justify-content: space-between;
+  margin: 0rem 4rem;
+}
+
+a {
+  margin: 15px;
+  text-decoration: none;
+  color: black;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+.definitions-link {
+ text-decoration: underline;
 }
 
 main {
-  width: 50%;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  align-items: center;
 }
+
+.content-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.5rem;
+  width: 50%;
+  padding: 15px;
+  margin: 20px;
+}
+
+h1 {
+  align-self: flex-start;
+  margin: 15px 0px;
+  letter-spacing: 1px;
+}
+
+.definition-container {
+  width: 100%;
+}
+
+h2 {
+  margin: 10px 0px;
+  font-weight: 600;
+}
+
+p {
+  font-size: 18px;
+  margin: 0px;
+  color: black;
+}
+
 
 
