--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 html {
   padding: 0px;
   margin: 0px;
+  overflow-x: hidden;
 }
 
 body {
@@ -20,7 +21,7 @@ body {
 nav {
   border-bottom: 5px solid #5d5da0;
   width: 100%;
-  padding: 1rem;
+  padding: 1.5rem;
   box-shadow: 0px 1px 10px #999;
 }
 
@@ -30,6 +31,20 @@ nav {
   margin: 0rem 4rem;
 }
 
+a {
+  margin: 15px;
+  text-decoration: none;
+  color: black;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+.calculator-link {
+ text-decoration: underline;
+}
+
 main {
   display: flex;
   flex-direction: column;
@@ -37,6 +52,7 @@ main {
   gap: 2rem;
   height: 100vh;
   padding: 20px;
+  margin-top: 15px;
 }
 
 h1 {
