--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@ body {
 
 nav {
   border-bottom: 5px solid #5d5da0;
-  width: 100%;
   padding: 1.5rem;
   box-shadow: 0px 1px 10px #999;
 }
@@ -55,15 +54,14 @@ main {
   margin-top: 15px;
 }
 
+.title-container {
+  width: 55rem;
+}
+
 h1 {
   color: black;
   letter-spacing: 1px;
   margin: 2px;
-}
-
-.title-container {
-  width: 55%;
-  padding: 5px;
 }
 
 .instructions {
@@ -73,7 +71,7 @@ h1 {
 }
 
 form {
-  width: 55%;
+  width: 55rem;
   border: 1.5px solid #c9c9c9;
   border-radius: 10px;
   background-color: rgba(0, 0, 0, 0.11);
@@ -87,7 +85,7 @@ fieldset {
 }
 
 p {
-  font-size: 16px;
+  font-size: 15px;
   margin: 0px;
   color: black;
 }
@@ -123,13 +121,13 @@ p {
 }
 
 input {
-  width: 5rem;
-  height: 1.8rem;
+  width: 4rem;
+  height: 1.5rem;
   padding: 4px;
   margin: 2px;
   background-color: var(--bg);
   color: var(--compliment);
-  font-size: 20px;
+  font-size: 15px;
   border: 1.5px solid #c9c9c9;
   border-radius: 4px;
   text-align: center;
@@ -158,102 +156,47 @@ span {
   letter-spacing: 1px;
 }
 
-@media (max-width: 1090px) {
-  .calculate-btn {
-    width: 6rem;
-    font-size: 12px;
-  }
-
-  form {
-    width: 80%;
-  }
-}
-
-@media (max-width: 1058px) {
-  p {
+ @media (max-width: 1015px) {
+  .nav-contents {
+    margin: 0rem 1rem;
     font-size: 15px;
   }
 
-  input {
-    width: 4rem;
-    height: 1.5rem;
-    font-size: 15px;
+  .title-container {
+    width: 45rem;
   }
 
-  fieldset {
-    padding: 30px;
-  }
-}
-
-@media (max-width: 905px) {
-  fieldset {
-    gap: 1rem;
-    align-items: center;
-    padding: 20px;
-  }
-
-  p {
-    text-align: center;
-  }
-}
-
-@media (max-width: 600px) {
   h1 {
     font-size: 25px;
   }
 
-  fieldset {
-    flex-direction: column;
-  }
-}
-
-@media (max-width: 450px) {
-  h1 {
-    font-size: 18px;
+  .instructions {
+    font-size: 12px;
   }
 
-  p {
-    font-size: 13px;
+  form {
+    width: 45rem;
+  }
+
+  form p {
+    font-size: 14px;
+  }
+
+  input::placeholder {
+    font-size: 10px;
   }
 
   input {
     width: 3rem;
-    height: 1rem;
-    font-size: 13px;
-  }
-
-  .result-container {
-    gap: .5rem;
+    height: 1.2rem;
+    font-size: 14px;
   }
 
   .calculate-btn {
-    width: 4.5rem;
-    height: 1.8rem;
-    font-size: 10px;
-  }
-
-  .reset {
-    font-size: 22px;
+    width: 5.5rem;
+    font-size: 12px;
+    height: 2.2rem;
   }
 }
 
-@media (max-width: 360px) {
-  h1 {
-    font-size: 16px;
-    margin: 15px;
-  }
 
-  form {
-    width: 90%;
-  }
-
-  .result-container {
-    gap: .4rem;
-  }
-}
-
-@media (max-width: 300px) {
-  .result-container {
-    flex-direction: column;
-  }
-}
