--- a/style.css
+++ b/style.css
@@ -49,20 +49,20 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 2rem;
+  gap: 1rem;
   height: 100vh;
-  padding: 20px;
-  margin-top: 15px;
+  margin-top: 20px;
 }
 
 .title-container {
-  width: 55rem;
+  width: 40rem;
 }
 
 h1 {
   color: black;
   letter-spacing: 1px;
   margin: 2px;
+  font-size: 25px;
 }
 
 .instructions {
@@ -72,7 +72,7 @@ h1 {
 }
 
 form {
-  width: 55rem;
+  width: 40rem;
   border: 1.5px solid #c9c9c9;
   border-radius: 10px;
   background-color: rgba(0, 0, 0, 0.11);
@@ -80,13 +80,20 @@ form {
 
 fieldset {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  /* justify-content: space-between; */
   border: none;
-  padding: 40px;
+  padding: 25px;
+}
+
+.inquiry {
+  text-align: center;
 }
 
 p {
-  font-size: 15px;
+  font-size: 18px;
   margin: 0px;
   color: black;
 }
@@ -95,7 +102,7 @@ p {
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 1.5rem;
+  gap: 2rem;
   text-align: center;
 }
 
@@ -122,13 +129,13 @@ p {
 }
 
 input {
-  width: 4rem;
-  height: 1.5rem;
+  width: 5.5rem;
+  height: 1.8rem;
   padding: 4px;
-  margin: 2px;
+  margin: 8px 10px;
   background-color: var(--bg);
   color: var(--compliment);
-  font-size: 15px;
+  font-size: 18px;
   border: 1.5px solid #c9c9c9;
   border-radius: 4px;
   text-align: center;
@@ -146,15 +153,52 @@ input:focus {
   border: none;
   background-color: transparent;
   color: var(--compliment);
-  font-size: 25px;
+  font-size: 30px;
   padding: 0px;
   cursor: pointer;
 }
 
-span {
-  color: var(--compliment);
-  font-weight: bold;
-  letter-spacing: 1px;
+.formula-container {
+  display: flex;
+  flex-direction: row;
+  font-size: 12px;
+  color: #575757
+}
+
+.equals p {
+  padding: 10px;
+  font-size: 12px;
+  color: #575757;
+}
+
+.multiply p {
+  font-size: 12px;
+  color: #575757;
+}
+
+.fraction {
+  display: inline-block;
+  text-align: center;
+  vertical-align: middle;
+}
+
+.fraction .numerator, .fraction .denominator {
+  display: block;
+}
+
+.fraction .numerator {
+  border-bottom: 1px solid #575757; /* Adjust thickness of the fraction line here */
+  padding-bottom: 2px; /* Adjust spacing between numerator and fraction line */
+}
+
+.fraction .denominator {
+  margin-top: 2px; /* Adjust spacing between fraction line and denominator */
+}
+
+.multiply {
+  padding: 10px;
+  vertical-align: middle;
+  text-align: center;
 }
 
 @media (max-width: 1015px) {
